--- a/src/itc505/lab/4/styles.css
+++ b/src/itc505/lab/4/styles.css
@@ -9,7 +9,7 @@ body {
 /* Style the main heading */
 h1 {
     font-size: 36px;
-    color: #1e90ff; /* Royal Blue */
+    color: #2471A3; /* Royal Blue */
     margin-bottom: 20px;
     padding: 10px;
 }
