--- a/src/itc505/lab/4/styles.css
+++ b/src/itc505/lab/4/styles.css
@@ -1,7 +1,7 @@
 /* Apply styles for the entire document */
 body {
     font-family: 'Arial', sans-serif;
-    background-color: ##F1948A;
+    background-color: #AED6F1;
     margin: 20px;
     padding: 20px;
 }
